$Id$

*** Note: Please add new entries to the top of this file. ***
-------------------------------------------------------------------------------

- import ipnat source port randomization patch from FreeBSD CVS
  (see http://docs.freebsd.org/cgi/getmsg.cgi?fetch=427148+0+current/cvs-src)
  (important when running DNS servers behind m0n0wall with NAT turned on);
  add new option to System: Advanced page to control the port range used
  for random source port allocation during outbound NAT (default is
  1024 - 64535; portrange sysctls have been adjusted accordingly);
  reorganize System: Advanced page slightly at the same time

- update Dnsmasq to 2.45

- add kernel patch to fix ATA on some Cyrix/Geode based boards
  (see http://www.freebsd.org/cgi/cvsweb.cgi/src/sys/dev/pci/pci.c#rev1.343)
  (suggested by Konrad Jopek)

- fix "RSA Cert Subject" choice for My Identifier on IPsec VPN Mobile Client
  setup page (reported by rdnzl)

- don't allow the interface's network or broadcast address to be used in
  the DHCP client range, and also make sure that the interface's own
  address does not fall within the range

- make behavior of Interfaces: LAN page more intelligent (only disable
  DHCP server if the IPv4 address has actually changed; do not require
  reboot if only IPv6 address changed)

- fix broken time zones (hard links in zoneinfo.tgz)


1.3b13
------

- add support for IPv6-in-IPv4 tunnels on WAN (for use with tunnel brokers)

- for wrap image, show whether we're running on a WRAP or ALIX board on
  the system status page

- updated Dnsmasq to 2.43

- fix issue where firewall rules on PPTP VPN (and access to m0n0wall's own
  services, like ping or DNS, from a PPTP VPN client) wouldn't work if incoming
  GRE packets were matched by a traffic shaper rule on WAN

- add support for IPv6 over PPPoE/PPTP (WAN)

- fix "Register DHCP leases in DNS forwarder" option


1.3b12
------

- add initial IPv6 support (based on code contributed by Michael Hanselmann
  in 2005)